# benchmarking-harness

./: .env.example  .gitignore  DATASETS.md  Makefile  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml  thresholds.yaml
backend/app/: main.py
backend/app/api/: adjudication.py  auth.py  golden_sets.py  models.py  runs.py  schemas.py
backend/app/db/: enums.py  models.py  repositories.py
backend/app/services/: artifact_ingest.py  artifact_janitor.py  audit.py  auth.py  config.py  dispatcher.py  evidence_store.py  jobs.py  orchestrator.py  reconciliation.py  runner_client.py  schema_check.py  state_machine.py
backend/engine/: datasets.py  scoring.py
backend/engine/adapters/: base.py  onnx_adapter.py  pytorch_adapter.py  stub_adapter.py
backend/engine/cards/: generator.py
backend/engine/metrics/: __init__.py  classification.py  coverage.py  detection.py  grounding.py  segmentation.py
backend/engine/perturb/: transforms.py
backend/engine/registry/: registry.py
backend/engine/sandbox/: job.py  runner.py
backend/engine/tiers/: tier1_capability.py  tier2_stress.py  tier3_ops.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_feature_001_baseline.py  0002_production_hardening.py
backend/runner/: main.py
backend/tests/: conftest.py  conftest_postgres.py
backend/tests/contract/: test_adjudication_api.py  test_adjudication_identity.py  test_authorization.py  test_dev_auth_refusal.py  test_golden_set_path_containment.py  test_model_access.py  test_models_api.py  test_models_list.py  test_no_auto_approval.py  test_no_restricted_data.py  test_object_scope.py  test_runner_boundary.py  test_sandbox_hardening.py  (+3 more)
backend/worker/: main.py
(+122 files in other folders)
