[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "benchmarking-harness-backend"
version = "0.1.0"
description = "Model Benchmarking Harness (POC) — three-tier CV model gate with a mandatory human adjudication step"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.16",
    "pydantic>=2.6",
    "python-multipart>=0.0.9",
    "rq>=1.16",
    "redis>=5.0",
    "jinja2>=3.1",
    "pyyaml>=6.0",
    "numpy>=1.26",
    "pillow>=10.0",
]

[project.optional-dependencies]
# Heavy ML runtime — required to evaluate real pytorch/onnx models.
# The harness itself (gating logic, API, cards, stub runs) works without it.
ml = [
    "torch>=2.2",
    "onnxruntime>=1.17",
    "ultralytics>=8.1",
    "timm>=0.9",
    "torchmetrics>=1.3",
    "pycocotools>=2.0.7",
    "imagecorruptions>=1.1",
    "albumentations>=1.4",
    "grad-cam>=1.5",
    "fiftyone>=0.23",
    "docker>=7.0",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "black>=24.0",
]

[tool.setuptools.packages.find]
include = ["app*", "engine*", "worker*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",
    "B008",  # FastAPI Depends()/Form() in argument defaults is the framework idiom
    "UP042", # str+Enum is required for JSON/SQLModel round-tripping on py311
]

[tool.black]
line-length = 100
target-version = ["py311"]
